# trademodemo

./: README.md
.github/: CODEOWNERS
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: charts.py  orders.py  portfolio.py  stocks.py
backend/app/core/: auth.py  exceptions.py  portfolio_service.py
backend/app/db/: firebase.py
backend/app/models/: schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CandlestickChart.tsx  EmptyChartPlaceholder.tsx  Layout.tsx  OrderPanel.tsx  Portfolio.tsx  PortfolioSummary.tsx  PortfolioView.tsx  StockItem.tsx  StockSearch.tsx  TimeframeButton.tsx  TradingView.tsx
frontend/src/contexts/: ErrorContext.tsx
frontend/src/firebase/: firebase.ts
frontend/src/guards/: AuthRoute.tsx
frontend/src/hooks/: useChart.ts  useChartData.ts  useOrder.ts  usePortfolio.ts  useStockPrice.ts  useStockSearch.ts
frontend/src/pages/: GoogleLogin.tsx  Home.tsx
frontend/src/router/: index.tsx
frontend/src/types/: api.ts  chart.ts  stock.ts
frontend/src/utils/: formatters.ts  scheduleUtils.ts
