[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "firebase-admin>=6.4.0",
    "yfinance>=0.2.36",
    "pybind11>=2.12.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
]
